Unit test implementation and service clean up